--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <div id="calculator">
+            <input type="text" class="display" id="display" > 
+            <div id="key">
+                <button class="buttons" onclick="appendToDisplay('+')">+</button>
+                <button class="btn" onclick="appendToDisplay('7')">7</button>
+                <button class="btn" onclick="appendToDisplay('8')">8</button>
+                <button class="btn" onclick="appendToDisplay('9')">9</button>
+                <button class="buttons" onclick="appendToDisplay('-')">-</button>
+                <button class="btn" onclick="appendToDisplay('4')">4</button>
+                <button class="btn" onclick="appendToDisplay('5')">5</button>
+                <button class="btn" onclick="appendToDisplay('6')">6</button>
+                <button class="buttons" onclick="appendToDisplay('*')">*</button>
+                <button class="btn" onclick="appendToDisplay('1')">1</button>
+                <button class="btn" onclick="appendToDisplay('2')">2</button>
+                <button class="btn" onclick="appendToDisplay('3')">3</button>
+                <button class="buttons" onclick="appendToDisplay('/')">/</button>
+                <button class="btn" onclick="appendToDisplay('0')">0</button>
+                <button class="btn" onclick="appendToDisplay('.')">.</button>
+                <button class="btn" onclick="calculate()">=</button>
+                <button class="buttons" onclick="clearDisplay()">C</button>
+                
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
